# bm-camera-control

./: .gitignore  LICENSE  README.ja.md  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  config.ts  fleetStore.ts  i18n.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: camera.rs  lib.rs  main.rs
src/api/: discovery.ts  mockTransport.ts  registry.ts  tauriTransport.ts
src/components/: ApiConsole.tsx  ColorWheel.tsx  ConfigBar.tsx  ConnectBar.tsx  Controls.tsx  FleetWall.tsx  MediaPanel.tsx  MonitoringOutputPanel.tsx  Panel.tsx  RecordingHud.tsx  ScenesPanel.tsx  SlatePanel.tsx  SystemFormatPanel.tsx  TabBar.tsx
src/mock/: profiles.ts
